<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tictactoe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.acme.tictactoe.view.TicTacToeActivity">

  <GridLayout
      android:id="@+id/buttonGrid"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:columnCount="3"
      android:rowCount="3">

    <Button
        android:id="@+id/cell_0_0"
        style="@style/tictactoebutton"/>

    <Button
        android:id="@+id/cell_0_1"
        style="@style/tictactoebutton"/>

    <Button
        android:id="@+id/cell_0_2"
        style="@style/tictactoebutton"/>

    <Button
        android:id="@+id/cell_1_0"
        style="@style/tictactoebutton"/>

    <Button
        android:id="@+id/cell_1_1"
        style="@style/tictactoebutton"/>

    <Button
        android:id="@+id/cell_1_2"
        style="@style/tictactoebutton"/>

    <Button
        android:id="@+id/cell_2_0"
        style="@style/tictactoebutton"/>

    <Button
        android:id="@+id/cell_2_1"
        style="@style/tictactoebutton"/>

    <Button
        android:id="@+id/cell_2_2"
        style="@style/tictactoebutton"/>
  </GridLayout>

  <LinearLayout
      android:id="@+id/winnerPlayerViewGroup"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      android:visibility="gone"
      tools:visibility="visible">

    <TextView
        android:id="@+id/winnerPlayerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="40sp"
        tools:text="X"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winner"
        android:textSize="30sp"/>
  </LinearLayout>
</LinearLayout>
