<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.TicTacToeActivity">

  <item android:id="@+id/action_reset"
      android:orderInCategory="100"
      android:title="@string/action_reset"
      app:showAsAction="ifRoom"/>
</menu>